Merged PR 1216: feat(proj): add modules to core app